CSS aanpassing Rudy met scan lines, retro look en retro Google font.

--- a/public/Ambtenaar.html
+++ b/public/Ambtenaar.html
@@ -3,10 +3,89 @@
 <head>
   <meta charset="UTF-8">
   <title>Ambtenaar</title>
+  <!-- Gezien de eenvoud van de website heb ik er voor gekozen de CSS in het HTML document zelf te zetten -->
+  <!-- Op deze manier kan de rest van de groep hier evt nog makkelijk iets aan aanpassen -->
+  <!-- Zie mijn CSS uitleg in wordt voor de exacte uitleg van syling en scan lines -->
+  <!-- Google Fonts toevoegen -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <style>
+    /* Basis retro styling */
+    body {
+      font-family: 'Press Start 2P', cursive;
+      background-color: #0a0a0a; /* Donkere achtergrond */
+      color: #ffbf00; /* Amberkleurige tekst */
+      margin: 0;
+      padding: 20px;
+      line-height: 1.5;
+    }
+
+    /* Scanline effect voor extra retro gevoel */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: linear-gradient(
+        rgba(18, 16, 16, 0.1) 50%,
+        rgba(0, 0, 0, 0.25) 50%
+      );
+      background-size: 100% 2px;
+      pointer-events: none;
+      z-index: 100;
+    }
+
+    /* Formulier styling */
+    form {
+      margin-bottom: 30px;
+      padding: 15px;
+      border: 1px solid #ffbf00;
+      background-color: rgba(10, 10, 10, 0.7);
+    }
+
+    input, button {
+      display: block;
+      width: 100%;
+      max-width: 400px;
+      margin-bottom: 10px;
+      padding: 8px;
+      background-color: #1a1a1a;
+      color: #ffbf00;
+      border: 1px solid #ffbf00;
+      font-family: 'Press Start 2P', cursive;
+    }
+
+    button {
+      background-color: #ffbf00;
+      color: #0a0a0a;
+      cursor: pointer;
+      font-size: 0.8em;
+    }
+
+    button:hover {
+      background-color: #ffd700;
+    }
+
+    h1, h2 {
+      color: #ffbf00;
+      border-bottom: 1px solid #ffbf00;
+      padding-bottom: 5px;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      padding: 5px;
+      border-bottom: 1px dashed #ffbf00;
+    }
+  </style>
 </head>
 <body>
   <h1>Hallo Ambtenaar!</h1>
-
   <h2>Nieuwe Burger toevoegen</h2>
   <form id="BurgerForm">
     <input type="text" name="Voornaam" placeholder="Voornaam" required>
@@ -16,28 +95,24 @@
     <input type="text" name="Familie_code" placeholder="Familiecode" required>
     <button type="submit">Toevoegen</button>
   </form>
-
   <h2>Huwelijk registreren</h2>
-<form id="HuwelijkForm">
-  <input type="number" name="partner1_id" placeholder="ID Partner 1" required>
-  <input type="number" name="partner2_id" placeholder="ID Partner 2" required>
-  <input type="date" name="datum" required>
-  <button type="submit">Registreer Huwelijk</button>
-</form>
-
-<h2>Kind registreren</h2>
-<form id="KindForm">
-  <input type="number" name="ouder1_id" placeholder="Ouder 1 ID" required>
-  <input type="number" name="ouder2_id" placeholder="Ouder 2 ID" required>
-  <input type="text" name="voornaam" placeholder="Voornaam kind" required>
-  <input type="text" name="achternaam" placeholder="Achternaam kind" required>
-  <input type="date" name="geboortedatum" required>
-  <button type="submit">Registreer kind</button>
-</form>
-
+  <form id="HuwelijkForm">
+    <input type="number" name="partner1_id" placeholder="ID Partner 1" required>
+    <input type="number" name="partner2_id" placeholder="ID Partner 2" required>
+    <input type="date" name="datum" required>
+    <button type="submit">Registreer Huwelijk</button>
+  </form>
+  <h2>Kind registreren</h2>
+  <form id="KindForm">
+    <input type="number" name="ouder1_id" placeholder="Ouder 1 ID" required>
+    <input type="number" name="ouder2_id" placeholder="Ouder 2 ID" required>
+    <input type="text" name="voornaam" placeholder="Voornaam kind" required>
+    <input type="text" name="achternaam" placeholder="Achternaam kind" required>
+    <input type="date" name="geboortedatum" required>
+    <button type="submit">Registreer kind</button>
+  </form>
   <h2>Bestaande Burgers</h2>
   <ul id="Burgers"></ul>
-
   <script src="ambtenaar.js"></script>
 </body>
 </html>
