--- a/public/Ambtenaar.html
+++ b/public/Ambtenaar.html
@@ -3,10 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Ambtenaar</title>
-  <!-- Gezien de eenvoud van de website heb ik er voor gekozen de CSS in het HTML document zelf te zetten -->
-  <!-- Op deze manier kan de rest van de groep hier evt nog makkelijk iets aan aanpassen -->
-  <!-- Zie mijn CSS uitleg in wordt voor de exacte uitleg van syling en scan lines -->
-  <!-- Google Fonts toevoegen -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
     /* Basis retro styling */
@@ -82,6 +78,19 @@
       padding: 5px;
       border-bottom: 1px dashed #ffbf00;
     }
+
+    /* Tooltip styling */
+    .tooltip {
+      position: fixed;
+      background-color: #ffbf00;
+      color: #0a0a0a;
+      padding: 10px;
+      border-radius: 5px;
+      z-index: 200;
+      bottom: 20px;
+      right: 20px;
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -95,6 +104,7 @@
     <input type="text" name="Familie_code" placeholder="Familiecode" required>
     <button type="submit">Toevoegen</button>
   </form>
+  
   <h2>Huwelijk registreren</h2>
   <form id="HuwelijkForm">
     <input type="number" name="partner1_id" placeholder="ID Partner 1" required>
@@ -102,6 +112,7 @@
     <input type="date" name="datum" required>
     <button type="submit">Registreer Huwelijk</button>
   </form>
+  
   <h2>Kind registreren</h2>
   <form id="KindForm">
     <input type="number" name="ouder1_id" placeholder="Ouder 1 ID" required>
@@ -111,8 +122,13 @@
     <input type="date" name="geboortedatum" required>
     <button type="submit">Registreer kind</button>
   </form>
+
   <h2>Bestaande Burgers</h2>
   <ul id="Burgers"></ul>
+
+  <!-- Tooltip element -->
+  <div class="tooltip" id="tooltip"></div>
+
   <script src="ambtenaar.js"></script>
 </body>
 </html>
